# UnitTestBigDataClass

./: .gitignore  LICENSE  README.md
CorruptedTest/: MockMyDataClass.hpp  MockStinkyOldLegacyDataClass.hpp  MyFeature.cpp  MyFeature.hpp  MyNewFeature.cpp  MyNewFeature.hpp  TestMyNewFeature.cpp
FullMock/: CMakeLists.txt  MyDataClass.hpp  MyFeature.cpp  MyFeature.hpp  MyNewFeature.cpp  MyNewFeature.hpp  StinkyOldLegacyDataClass.hpp  StinkyOldLegacyDataClassImp.cpp  TestMyNewFeature.cpp  mainTest.cpp
Proof/: CMakeLists.txt  MyDataClassImp.hpp  MyFeature.cpp  MyFeature.hpp  MyNewFeature.cpp  MyNewFeature.hpp  StinkyOldLegacyDataClassImp.hpp  TestMyNewFeature.cpp  mainTest.cpp
Solution/: MyFeature.cpp  MyFeature.hpp  MyNewFeature.cpp  MyNewFeature.hpp  StinkyOldLegacyDataClass.hpp  StinkyOldLegacyDataClassImp.cpp  StinkyOldLegacyDataClassImp.hpp
